# obs-live-hub

./: .gitignore  CLAUDE.md  CMakeLists.txt  GETTING_STARTED.md  LICENSE  README.md  RELEASE_CHECKLIST.md  STATUS.md  buildspec.json  config.json.example
data/: conversation_overlay.html  debug.html  effect.html  overlay.html  tts.html
src/: plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/auth/: GoogleOAuth.cpp  GoogleOAuth.hpp  TwitchOAuth.cpp  TwitchOAuth.hpp
src/core/: EventBus.hpp  PlatformInterface.hpp  PluginConfig.cpp  PluginConfig.hpp
src/modules/: AivisEngine.cpp  AivisEngine.hpp  AivisStyleCache.cpp  AivisStyleCache.hpp  BouyomiChanClient.cpp  BouyomiChanClient.hpp  EffectManager.cpp  EffectManager.hpp  EngineManager.cpp  EngineManager.hpp  PointManager.cpp  PointManager.hpp  ViewerTtsSettings.cpp  ViewerTtsSettings.hpp  VoiceroidClient.cpp  VoiceroidClient.hpp  WsServer.cpp  WsServer.hpp  XClient.cpp  XClient.hpp
src/ui/: AivisParamLimitDialog.cpp  AivisParamLimitDialog.hpp  BouyomiParamLimitDialog.cpp  BouyomiParamLimitDialog.hpp  BrowserDiagDialog.cpp  BrowserDiagDialog.hpp  CommentDock.cpp  CommentDock.hpp  ConversationOverlayDialog.cpp  ConversationOverlayDialog.hpp  DebugSettingsDialog.cpp  DebugSettingsDialog.hpp  EffectSettingsDialog.cpp  EffectSettingsDialog.hpp  OverlayStyleDialog.cpp  OverlayStyleDialog.hpp  OverlayUtils.cpp  OverlayUtils.hpp  PointSettingsDialog.cpp  PointSettingsDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StreamSettingsDialog.cpp  StreamSettingsDialog.hpp  TtsDictionaryDialog.cpp  TtsDictionaryDialog.hpp  TtsSpeechDialog.cpp  TtsSpeechDialog.hpp  VoteManagerDialog.cpp  VoteManagerDialog.hpp  XAccountSettingsDialog.cpp  XAccountSettingsDialog.hpp  XApiTestDialog.cpp  XApiTestDialog.hpp  XManualPostDialog.cpp  XManualPostDialog.hpp  XPostConfirmDialog.cpp  XPostConfirmDialog.hpp  XPostDock.cpp  XPostDock.hpp  (+2 more)
